--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.17.2",
+    "consign": "^0.1.6",
     "express": "^4.15.3"
   }
 }
