--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "mocha api/test/*.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.17.2",
+    "chai": "^4.0.2",
     "consign": "^0.1.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mocha": "^3.4.2",
+    "should": "^11.2.1",
+    "sinon": "^2.3.5",
+    "supertest": "^3.0.0"
   }
 }
